# Final-Project-CIS565

./: .gitmodules  README.md
Scripts/: autoware-melodic-dnn-deps.sh  downloadMitSubfolder.py  mitFileIndex.txt
SelectedDocumentation/: sensor_msgs_Image Documentation.html
deep_learning_pipeline/: CMakeLists.txt  README.md  package.xml
deep_learning_pipeline/cuda_utilities/: cudaFont.cu  cudaFont.h  cudaMappedMemory.h  cudaOverlay.cu  cudaOverlay.h  cudaRGB.cu  cudaRGB.h  cudaResize.cu  cudaResize.h  cudaUtility.h  detectNet.cu  detectNet.cuh  imageNet.cuh
deep_learning_pipeline/inference/: ModelImporter.cpp  ModelImporter.h  ObjectDetection.cpp  ObjectDetection.h  segNet.cpp  segNet.h
deep_learning_pipeline/nvidia_files/: commandLine.cpp  commandLine.h  filesystem.cpp  filesystem.h  img_write.cpp  img_write.h  plugins.cpp  randInt8Calibrator.cpp
deep_learning_pipeline/src/: .node_detectnet.cpp.swn  .node_detectnet.cpp.swo  image_converter.cpp  image_converter.h  node_detectnet.cpp  node_imagenet.cpp  node_segnet.cpp  nodelet_imagenet.cpp
deep_learning_pipeline/utilities/: detectNet.cu
drone_mom_msgs/: CMakeLists.txt  package.xml
drone_mom_msgs/msg/: drone_mom.msg
mesh_construction/: CMakeLists.txt  mesh_contruct.cpp  package.xml
mesh_construction/src/: mesh_construct_node.cpp
object_detection/: CMakeLists.txt  README.md  package.xml
object_detection/cuda_utilities/: cudaMappedMemory.h  cudaRGB.cu  cudaRGB.h  cudaUtility.h  detectNet.cu  detectNet.cuh  imageNet.cu  imageNet.cuh  profiler.h
object_detection/inference/: ModelImporter.cpp  ModelImporter.h  ObjectDetection.cpp  ObjectDetection.h
object_detection/src/: image_converter.cpp  image_converter.h  node_detectnet.cpp  node_imagenet.cpp
object_detection/utils/: filesystem.cpp  img_write.cpp  img_write.h  profiler.cpp  profiler.h  write_img.h
point_cloud/: CMakeLists.txt  README.md  package.xml
point_cloud/src/: TrifocalTensor.cpp  TrifocalTensor.hpp  pointMatcher.cu  pointMatcher.h  point_cloud_node.cpp  point_cloud_node.h  ptypes.h
presentations/GLTF_Samples_Output/: mesh_unlabeled_21.gltf  sample_output.gltf
